# shamir-wallet

./: LICENSE  README.md  bitcoin-theme.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
src/: Store.ts  Types.ts  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  db.rs  main.rs  shamir.rs  wallet.rs
src/lib/: BitcoinSvg.svelte  ErrorToast.ts  LoadingButton.svelte
src/routes/: +layout.svelte  +page.svelte  SideBar.svelte
src/routes/login/: +page.svelte  CreateForm.svelte  CreateWallet.svelte  LoginForm.svelte  LoginWallet.svelte  MnemonicModal.svelte  RecoverForm.svelte
src/routes/wallet/[name]/: +layout.svelte  +page.svelte  +page.ts  ButtonBack.svelte
src/routes/wallet/[name]/send/: +page.svelte  SendModal.svelte
src/routes/wallet/[name]/transactions/: +page.svelte
