# Manifest file for crates, metadata

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["lmnk"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["cli"] }
bdk = { version = "0.28.1", default-feature = false, features = ["all-keys", "sqlite"] }
tauri-cli = "1.5.9"
clap = "4.4.14"
sled = "0.34.7"
orion = { version = "0.17.6", features = ["serde"] }
anyhow = "1.0.79"
rpassword = "7.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
